[package]
name = "runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "runner-arm"
path = "src/arm.rs"
required-features = ["arm", "le"]

[[bin]]
name = "runner-armeb"
path = "src/armeb.rs"
required-features = ["arm", "be"]

[[bin]]
name = "runner-x86_64"
path = "src/x86_64.rs"
required-features = ["x86_64", "le"]

[[bin]]
name = "runner-i386"
path = "src/i386.rs"
required-features = ["i386", "le"]

[[bin]]
name = "runner-aarch64"
path = "src/aarch64_be.rs"
required-features = ["aarch64", "le"]

[[bin]]
name = "runner-aarch64_be"
path = "src/aarch64.rs"
required-features = ["aarch64", "be"]

[[bin]]
name = "runner-ppc"
path = "src/ppc.rs"
required-features = ["ppc", "be"]

[features]
default = ["std", "le"]
std = []
clippy = []
## Set emulator to big endian
le = []
be = ["libafl_qemu/be"]

#! ## Mutually exclusive architectures
arm = ["libafl_qemu/arm"]
x86_64 = ["libafl_qemu/x86_64"]
i386 = ["libafl_qemu/i386"]
aarch64 = ["libafl_qemu/aarch64"]
mips = ["libafl_qemu/mips"]
ppc = ["libafl_qemu/ppc", "be"]
hexagon = ["libafl_qemu/hexagon"]

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = "1.0.1"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "string"] }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22", features = ["release_max_level_info"] }
readonly = { version = "0.2.12" }
libafl_bolts = { path = "../../../libafl_bolts" }
libafl_qemu = { path = "../../" }
thiserror = { version = "2.0.11" }
